kustomize/base/ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p
spec:
  rules:
    - host: p.k.seankhliao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: p
                port:
                  name: http
