kustomize/base/ingressroute.k8s.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: p
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`p.seankhliao.com`)
    kind: Rule
    services:
    - name: p
      port: 80
  tls:
    certResolver: default
